--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -10,7 +10,7 @@
             {{ if .Date }}
             <time>{{ .Date.Format "2006-01-02" }}</time>
             {{ end }}
-            <span class="post-views">
+            <span id="busuanzi_container_page_pv" class="post-views">
               阅读量 <span id="busuanzi_value_page_pv"></span>
             </span>
             {{ with .Params.tags }}
@@ -49,7 +49,7 @@
       <!-- TOC -->
       {{ if isset .Params "toc" }}
       <div class="toc">
-        <strong>Table of contents:</strong>
+        <strong>目录</strong>
         {{ .TableOfContents }}
       </div>
       {{ end }}
