--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -12,8 +12,8 @@
             {{ end }}
             <span class="post-views">
               阅读量 
-              <span id="busuanzi_container_page_pv" style="display: inline;">
-                <span id="busuanzi_value_page_pv">0</span>
+              <span id="busuanzi_container_page_pv" style="display: none;">
+                <span id="busuanzi_value_page_pv">--</span>
               </span>
             </span>
             {{ with .Params.tags }}
@@ -77,7 +77,7 @@
 }
 
 #busuanzi_container_page_pv {
-  display: inline !important;
+  display: none;
 }
 
 #busuanzi_value_page_pv {
